fix cropperjs

--- a/media/com_quantummanager/css/quantumcropperjs.css
+++ b/media/com_quantummanager/css/quantumcropperjs.css
@@ -416,6 +416,7 @@
 .quantumcropperjs-module .editor {
     position: relative;
     margin: auto;
+    max-width: 100%;
     height: 100%;
     flex: 1;
 }
